Changes issue watch button icon to eye image to align icon with function and improve visual clarity

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1777,11 +1777,6 @@ svg.icon-ok {
   display: none;
 }
 
-.icon-fav svg.icon-svg {
-  fill: #ffc400;
-  stroke: #ffc400;
-}
-
 svg.icon-svg {
   stroke: #169;
   fill: none;
